add logo and carousel

--- a/src/main.css
+++ b/src/main.css
@@ -5,9 +5,11 @@
   margin-bottom: 0;
 }
 
-.navbar img{
-
+.logo{
+  margin-top: -10px;
 }
+
+
 
 /* CUSTOMIZED CAROUSEL
 -------------------------------------------------- */
