--- a/src/main.css
+++ b/src/main.css
@@ -9,6 +9,12 @@
   margin-top: -10px;
 }
 
+.top-contact{
+  background-color: yellow;
+}
+.contact-space{
+  margin-left: 2em;
+}
 
 
 /* CUSTOMIZED CAROUSEL
